[gd_scene load_steps=11 format=3 uid="uid://bfrav2bbqpxug"]

[ext_resource type="Script" path="res://player/player_controller.gd" id="1_ub3x8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6koet"]
transparency = 1
albedo_color = Color(0, 0.298039, 1, 0.34902)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jkfie"]
material = SubResource("StandardMaterial3D_6koet")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ywkg8"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jgn1b"]
properties/0/path = NodePath("PlayerGhost:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerGhost:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:tick_sync_server")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:linear_velocity_sync_server")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62wvf"]
albedo_color = Color(0, 0.3, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ud6jc"]
material = SubResource("StandardMaterial3D_62wvf")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4bg2w"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 1.0
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_1ouek"]
material = SubResource("StandardMaterial3D_4bg2w")
size = Vector3(0.7, 0.2, 0.2)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7yws8"]
properties/0/path = NodePath(".:input_dir_sync")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:is_jumping_sync")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:tick_sync")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="Node3D" groups=["player"]]
script = ExtResource("1_ub3x8")

[node name="PlayerGhost" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 3

[node name="Body" type="MeshInstance3D" parent="PlayerGhost"]
mesh = SubResource("CapsuleMesh_jkfie")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerGhost"]
shape = SubResource("CapsuleShape3D_ywkg8")

[node name="GhostSync" type="MultiplayerSynchronizer" parent="PlayerGhost"]
root_path = NodePath("../..")
replication_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_jgn1b")

[node name="PlayerBody" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 4
collision_mask = 5

[node name="Body" type="MeshInstance3D" parent="PlayerBody"]
mesh = SubResource("CapsuleMesh_ud6jc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBody"]
shape = SubResource("CapsuleShape3D_ywkg8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0204223, 0.459778, -0.437381)
mesh = SubResource("BoxMesh_1ouek")

[node name="InputSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7yws8")
